# external-data-gallery

./: LICENSE  README.md  app.py  pyproject.toml  pytest.ini  temp.py
.github/workflows/: notebook-tests.yml
binder/: requirements.txt
docker/: Dockerfile
examples/alpha-earth-embedding/: README.md  embedding_extractor.py
examples/alpha-earth-embedding/assets/: unique_coordinates_alphaearth_V1.0.tsv
examples/alpha-earth-embedding/output/: README.md
examples/nasa-power/: README.md  nasa_power_example.R
examples/nasa-power/assets/: muri_coring_locations.csv
notebooks/earth-engine/: alpha-earth.ipynb
notebooks/earth-engine/assets/: locations.csv
notebooks/parquet/: gbif.ipynb
notebooks/zarr/: nasa-power-with-caching.ipynb  nasa-power.ipynb
src/external_data_gallery/: __init__.py  agent.py
src/external_data_gallery/sources/: gbif_parquet.py  nasa_zarr.py
tests/: test_agent.py
