[project]
name = "external-data-gallery"
version = "0.1.0"
description = "Gallery of scripts and notebooks demonstrating access to external data sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.3",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "s3fs>=2025.12.0",
    "zarr>=3.1.5",
]
