[project]
name = "external-data-gallery"
version = "0.1.0"
description = "Gallery of scripts and notebooks demonstrating access to external data sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.1.0",
    "dask[distributed]>=2025.11.0",
    "earthengine-api>=1.7.3",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "s3fs>=2025.12.0",
    "zarr>=3.1.5",
]
