[project]
name = "external-data-gallery"
version = "0.1.0"
description = "Gallery of scripts and notebooks demonstrating access to external data sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "bokeh>=3.1.0",
    "dask[distributed]>=2025.11.0",
    "earthengine-api>=1.7.3",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "s3fs>=2025.12.0",
    "streamlit>=1.52.1",
    "watchdog>=6.0.0",
    "zarr>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/external_data_gallery"]

[dependency-groups]
dev = [
    "pytest>8.0.0",
    "pytest-cov",
    "nbmake>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "notebooks",
]
addopts = [
    "--cov=external_data_gallery",
    "--cov-report=term-missing",
    "--nbmake",
    "--nbmake-timeout=600",
    "--ignore=notebooks/earth-engine/alpha-earth.ipynb"
]
python_files = [
    "test_*.py",
    "*.ipynb",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
